--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div id="main-wrapper">
+  <sidenav></sidenav>
+  <div id="content">
+      <router-outlet></router-outlet>
+  </div>
+</div>
