--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div id="main-wrapper">
   <sidenav></sidenav>
+  <div id="mobile-menu">
+    <i class="material-icons">menu</i>
+    <h3>Heisz Orga</h3>
+  </div>
   <div id="content">
       <router-outlet></router-outlet>
   </div>
