--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <div id="sidenav-wrapper">
     <div id="userinfo">
-        <span>{{ user.username }}</span><i class="material-icons">keyboard_arrow_down</i>
+        <img [src]="user.avatar" class="avatar">
+        <span>{{ user.username }}</span>
     </div>
     <div id="sidenav">
         <ul>
