Designanpassungen im Dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,36 +1,70 @@
-<div *ngIf="nextEvent" class="card">
-    <h3 class="card-title">Nächster Termin</h3>
-    <h3>{{ nextEvent.date }}: {{ nextEvent.name}}</h3>
-</div>
-<div class="card" id="mails">
-    <h3 class="card-title">{{ mails.length }} Ungelesene Mails</h3>
-    <div *ngFor="let mail of mails" (click)="openMail(mail)">
-        <div class="from span">{{ mail.cut ? mail.cut : mail.from }}</div> 
-        <div class="subject span">{{ mail.subject }}</div>
+<h1 class="greeting">
+    Moin {{ user.name }}!
+</h1>
+<div class="card-wrapper w50 h7">
+    <h3 class="card-title">Deine Aufgaben:</h3>
+    <div class="card" id="tasks">
+        <div class="task">
+            <div class="circle" [ngStyle]="{'background-color': tasks[0].color}"></div>
+            <h4>{{ tasks[0].name }}</h4> 
+        </div>
+        <div class="task">
+            <div class="circle" [ngStyle]="{'background-color': tasks[1].color}"></div>
+            <h4>{{ tasks[1].name }}</h4> 
+        </div>
+        <div class="task">
+            <div class="circle" [ngStyle]="{'background-color': tasks[2].color}"></div>
+            <h4>{{ tasks[2].name }}</h4> 
+        </div>
+        <a class="more" routerLink="/tasks">{{ tasks.length - 3 }} weitere anzeigen ></a>
     </div>
 </div>
-<div class="card" id="finArticles">
-    <h3 class="card-title">Artikel</h3>
-    <canvas baseChart
-    [data]="doughnutChartData"
-    [labels]="doughnutChartLabels"
-    [chartType]="doughnutChartType"
-    [colors]="doughnutChartColors"
-    (chartHover)="chartHovered($event)"
-    (chartClick)="chartClicked($event)"></canvas>
-    
+<div class="card-wrapper w50 h7">
+    <h3 class="card-title">Die nächsten Termine:</h3>
+    <div class="card">
+        <div *ngFor="let event of nextEvents" class="event">
+            <h4>{{ event.date }}</h4> 
+            <span>{{ event.name}}</span>
+        </div>
+        <a class="more" routerLink="/events">mehr anzeigen ></a>
+    </div>
 </div>
-<div class="card" id="accounting">
+<div class="card-wrapper w100">
+    <h3 class="card-title">{{ mails.length }} Ungelesene Mails:</h3>
+    <div id="mails" class="card">
+        <div *ngFor="let mail of mails" (click)="openMail(mail)">
+            <div class="from span">{{ mail.cut ? mail.cut : mail.from }}</div> 
+            <div class="subject span">{{ mail.subject }}</div>
+        </div>
+    </div>
+</div>
+<div class="card-wrapper w50 h13">
+    <h3 class="card-title">Artikel</h3>
+    <div class="card" id="finArticles">
+        <canvas baseChart
+        height="200px"
+        [data]="doughnutChartData"
+        [labels]="doughnutChartLabels"
+        [chartType]="doughnutChartType"
+        [colors]="doughnutChartColors"
+        (chartHover)="chartHovered($event)"
+        (chartClick)="chartClicked($event)"></canvas>
+        
+    </div>
+</div>
+<div class="card-wrapper w50 h13">
     <h3 class="card-title">Buchhaltung</h3>
-    Momentaner Kontostand: {{ accounting.money }}
-    <canvas baseChart width="400" height="400"
-    [datasets]="lineChartData"
-    [labels]="lineChartLabels"
-    [options]="lineChartOptions"
-    [colors]="lineChartColors"
-    [legend]="lineChartLegend"
-    [chartType]="lineChartType"
-    (chartHover)="chartHovered($event)"
-    (chartClick)="chartClicked($event)"></canvas>
-    
+    <div class="card" id="accounting">
+        Momentaner Kontostand: {{ accounting.money }}
+        <canvas baseChart width="400" height="270px"
+        [datasets]="lineChartData"
+        [labels]="lineChartLabels"
+        [options]="lineChartOptions"
+        [colors]="lineChartColors"
+        [legend]="lineChartLegend"
+        [chartType]="lineChartType"
+        (chartHover)="chartHovered($event)"
+        (chartClick)="chartClicked($event)"></canvas>
+        
+    </div>
 </div>
