--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,23 +1,14 @@
-.card {
-    background-color: white;
-    box-shadow: 0px 0px 5px 0px #c1c1c1;
-    padding: 8px;
-    border-radius: 2px;
-    max-width: 28em;
-    margin-right: 8px;
-    margin-top: 8px;
+h1.greeting {
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
 }
 
-.card h3 {
+.card-wrapper h3, h4 {
     margin: 0;
 }
-
-.card .card-title {
-    font-weight: normal;
-    font-size: 0.7em;
-    color: #777777;
-}
-
+/*
 .card#mails div:not(.span) {
     position: relative;
     top: 5px;
@@ -26,7 +17,7 @@
     border-top: 1px solid #dadada;
     cursor: pointer;
 }
-
+*/
 .card#mails div .span {
     font-size: 0.95em;
     display: inline-block;
