--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,39 @@
     </div>
     <div id="sidenav">
         <ul>
-            <li *ngFor="let route of navRoutes" (click)="navigate($event, route)" [class.active]="route.name==selected">{{ route.name }}</li>
+            <li *ngFor="let route of navRoutes" (click)="navigate($event, route)" [class.active]="route.name==selected"><i class="material-icons">{{ route.icon }}</i><span>{{ route.name }}</span></li>
         </ul>
     </div>
+</div>
+<div id="mobile-tabs">
+    <ng-container *ngFor="let route of navRoutes">
+        <div class="tab-item" *ngIf="route.mobile" (click)="navigate($event, route)" [class.active]="route.name==selected">
+            <i class="material-icons">{{ route.icon }}</i>
+            <span>{{ route.name }}</span>
+        </div>
+    </ng-container>
+    <!--<div class="tab-item">
+        <i class="material-icons">home</i>
+        <span>Home</span>
+    </div>
+    <div class="tab-item">
+        <i class="material-icons">create</i>
+        <span>Artikel</span>
+    </div>
+    <div class="tab-item">
+        <i class="material-icons">mail</i>
+        <span>Mail</span>
+    </div>
+    <div class="tab-item">
+        <i class="material-icons">event</i>
+        <span>Termine</span>
+    </div>
+    <div class="tab-item">
+        <i class="material-icons">attach_money</i>
+        <span>Buchhaltung</span>
+    </div>
+    <div class="tab-item">
+        <i class="material-icons">settings</i>
+        <span>Einstellungen</span>
+    </div>-->
 </div>
