--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,7 @@ dashboard, articles, events, mails, accounting, subscriptions, newbooking {
 
 .card div.task {
     margin-bottom: 8px;
+    padding-left: 5px;
 }
 
 .card div.task div.circle {
@@ -189,7 +190,7 @@ sidenav {
     width: 190px;
 }
 
-#mobile-menu {
+#mobile-tabs {
     display: none;
 }
 
@@ -200,12 +201,59 @@ sidenav {
 
 @media (max-width: 672px) {
     sidenav {
+        height: 57px;
+        width: 100%;
+        bottom: 0px;
+        box-shadow: 0px 0px 10px 0px #a0a0a01c;
+        z-index: 10;
+    }
+
+    #sidenav-wrapper {
         display: none;
     }
 
     #content {
         left: 0px !important;
         width: 100% !important;
+        height: calc(100% - 57px);
+        /**box-shadow: inset 0 -10px 12px -10px #0000004d;**/
+    }
+
+    #mobile-tabs {
+        display: flex;
+        justify-content: space-around;
+        position: fixed;
+        z-index: 10;
+        background: linear-gradient(to top right, #fff6fe, #ffd79a);
+        width: 100%;
+        height: 57px;
+        bottom: 0px;
+    }
+
+    #mobile-tabs .tab-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50px;
+        cursor: pointer;
+    }
+
+    #mobile-tabs .tab-item i {
+        margin-top: 9px;
+        font-size: 2em;
+        color: #5f5f5f;
+    }
+
+    #mobile-tabs .tab-item span{
+        font-size: 0.5em;
+    }
+
+    #mobile-tabs .tab-item.active span {
+        color: #ff317b !important;
+    }
+
+    #mobile-tabs .tab-item.active i {
+        color: #ff317b !important;
     }
 
     /*#mobile-menu {
