--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div id="sidenav-wrapper">
     <div id="userinfo">
         <img [src]="user.avatar" class="avatar">
-        <span>{{ user.username }}</span>
+        <span>{{ user.firstname }} {{ user.lastname }}</span>
     </div>
     <div id="sidenav">
         <ul>
