--- a/src/styles.css
+++ b/src/styles.css
@@ -177,6 +177,11 @@ button.outline {
     box-shadow: 2px 0px 20px 0px #80808017;
 }
 
+#content.fullscreen {
+    left: 0px !important;
+    width: 100% !important;
+}
+
 #content-inner {
     padding-top: 18px;
     padding-left: 18px;
