added eventpage and first calendar

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,12 @@
-Termine
+<div class="card-wrapper w50 h15">
+    <h3 class="card-title">Kalender:</h3>
+    <div class="card" id="calendar">
+        <calendar></calendar>
+    </div>
+</div>
+<div class="card-wrapper w50 h15">
+    <h3 class="card-title">Nächste Termine:</h3>
+    <div class="card" id="nextEvents">
+
+    </div>
+</div>
