--- a/src/app/accounting/newBooking.component.css
+++ b/src/app/accounting/newBooking.component.css
@@ -6,10 +6,22 @@
 
 #buttons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin-top: 9px;
 }
 
 button {
     margin: 5px;
+}
+
+input, select {
+    display: block;
+}
+
+input {
+    width: calc(100% - 10px);
+}
+
+select {
+    width: 100%;
 }
