--- a/src/styles.css
+++ b/src/styles.css
@@ -53,18 +53,16 @@ dashboard, articles, events, mails, accounting, subscriptions, newbooking {
     height: 13.8em;
 }
 
-.card-wrapper.h15 .card {
-    height: 15.8em;
+.card-wrapper.h33 .card {
+    height: 33em;
 }
 
 .card h3 {
     margin: 0;
 }
 
-.card .card-title {
-    font-weight: normal;
-    font-size: 0.7em;
-    color: #777777;
+.card-wrapper h3, h4 {
+    margin: 0;
 }
 
 .card .card-actions {
@@ -153,23 +151,23 @@ button {
     border-radius: 4px;
     padding: 9px;
     font-weight: bold;
-    box-shadow: 0px 0px 9px 0px #efefef;
+    /**box-shadow: 0px 0px 9px 0px #efefef;*/
     outline: none;
     cursor: pointer;
 }
 
 button:not(.outline){
-    color: white !important;
+    /**color: white !important;**/
 }
 
-button.save, button.primary {
-    background-color: #42a5f5;
-    border-color: #42a5f5;
-    color: #42a5f5;
+button.save, button.primary, button.cancel {
+    background-color: transparent;
+    border-color: transparent;
+    color: #2196f3;
 }
 
 button.cancel {
-    background-color: #c5c5c5
+    color: #f44336 !important;
 }
 
 button.outline {
@@ -199,6 +197,7 @@ button.outline {
     padding-left: 18px;
     padding-right: 18px;
     padding-bottom: 18px;
+    height: calc(100% - 36px);
 }
 
 sidenav {
@@ -214,6 +213,17 @@ sidenav {
 #lineChartWrapper {
     position: relative;
     max-height: 13em;
+}
+
+h1.page-title {
+    width: 100%;
+    margin-top: 11px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+}
+
+events {
+    height: 100%;
 }
 
 @media (max-width: 672px) {
@@ -234,6 +244,10 @@ sidenav {
         width: 100% !important;
         height: calc(100% - 57px);
         /**box-shadow: inset 0 -10px 12px -10px #0000004d;**/
+    }
+
+    #content-inner {
+        padding: 10px;
     }
 
     #mobile-tabs {
@@ -273,24 +287,9 @@ sidenav {
         color: #ff317b !important;
     }
 
-    /*#mobile-menu {
-        display: flex !important;
-        background-color: #37474f;
-        color: white;
-        padding-left: 10px;
-    }
-
-    #mobile-menu i {
-        top: 16px;
-        position: relative;
+    .card {
         margin-right: 0px;
     }
-
-    #mobile-menu h3 {
-        font-weight: normal;
-        font-size: 1.5em;
-        margin: 14px;
-    }*/
 
     .card .card-actions {
         flex-direction: column;
@@ -302,5 +301,9 @@ sidenav {
     
     .card-wrapper.w100 {
         width: 100%;
+    }
+
+    .m-hide {
+        display: none;
     }
 }
